tests/paczka1/small_fuzzy/10416819.err
Error in line 9: RmDa A33 92,5
Error in line 7: xZWKQWGL A567 29,1
